# atlas

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  STATUS.md  dist-workspace.toml  ideas.md  llms-full.txt  llms.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: benchmark-runner.md  grammar-engineer.md  perf-engineer.md  release-manager.md  rust-reviewer.md
.claude/commands/: adr.md  bench.md  improve.md  milestone.md  new-grammar.md  scope-check.md  weekly-review.md
.claude/hooks/: post-edit.sh  protect-baseline.sh  session-start.sh  stop-check.sh
.claude/skills/adr-writing/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  extraction_bug.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml
assets/: demo.tape
benchmark/: README.md  baseline.json  comprehension.sh  coverage.py  history.md  metric.py  run.sh
benchmark/comprehension/: questions-pytest-8.2.0.yaml  questions-smoke.yaml
benchmark/results/: .gitkeep
benchmark/tasks/: 01-add-field-three-sites.yaml  02-reuse-existing-utility.yaml
docs/: ADOPTION_METRICS.md  CLAUDE_CODE_MCP.md  FAQ.md  LAUNCH_CHECKLIST.md  MIGRATION.md  PRD.md  PRIVACY.md  README.md  RELEASE_ANNOUNCEMENT_TEMPLATE.md  RELEASING.md  SELF_IMPROVEMENT.md  agent-cookbook.md  agent-files.md  ci-diff-gate.md  ci-recipes.md  comparison.md  editor-snippets.md  exit-codes.md  index.html  install-offline.md  languages.md  launch-checklist.md  monorepos.md  post-launch-outreach.md  pre-commit.md  prompt-injection.md  release-notes-draft.md  release-readiness.md  social-launch.md  stability.md  style.css  submission-drafts.md  submissions.md  windows.md
docs/adr/: 0001-record-architecture-decisions.md  0002-index-based-graph.md  0003-budget-packing-ladder.md  0004-symbol-index-for-collapsed-tail.md  0005-structural-diff-between-trees.md  0006-pair-kind-changes-in-diff.md  0007-diff-git-revisions-via-git-cli.md  0008-mcp-server-over-stdio.md  0009-stable-symbol-anchors-progressive-disclosure.md
examples/: AGENTS.md  claude-code.mcp.json  dump-ast.rs  embed.rs
examples/gallery/: README.md  refresh.sh
queries/c/: tags.scm
queries/cpp/: tags.scm
queries/go/: tags.scm
queries/java/: tags.scm
queries/python/: tags.scm
queries/rust/: tags.scm
queries/typescript/: tags.scm
schemas/: atlas-diff.schema.json  atlas-map.schema.json
skills/: README.md
skills/atlas-orient/: SKILL.md
src/: api.rs  budget.rs  cache.rs  cli.rs  diff.rs  discover.rs  lib.rs  link.rs  main.rs  mcp.rs  parse.rs  rank.rs
src/lang/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/render/: color.rs  diff.rs  json.rs  markdown.rs  mod.rs  xml.rs
tests/: cache_cli.rs  diff_cli.rs  discover_walk.rs  doctor_cli.rs  explain_cli.rs  large_input.rs  map_cli.rs  mcp_cli.rs  parser_robustness.rs  query_snapshots.rs  render_snapshots.rs  schemas.rs
tests/discover_fixture/: README.md  app.py
tests/queries/fixtures/: c.c  (+6 more)
tests/render_snapshots/: fixtures.json  fixtures.md  fixtures.xml
(+27 files in other folders)
