[package]
name = "atlas"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.96"
description = "Compile a codebase into a token-budgeted structural map for LLM coding agents"
license = "MIT"
repository = "https://github.com/fkenmar/atlas"
readme = "README.md"
keywords = ["llm", "tree-sitter", "code-map", "tokens", "agent"]
categories = ["command-line-utilities", "development-tools"]

# Dependencies land milestone by milestone (docs/PRD.md §7.2): tree-sitter +
# grammar crates (M0), clap/rayon/tiktoken-rs/bincode (M1), notify/git2 (M2).
# Every addition is approved by the maintainer first — see CLAUDE.md.
[dependencies]
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
tiktoken-rs = "0.12.0"
clap = { version = "4.6.1", features = ["derive"] }
bincode = { version = "2.0", features = ["derive"] }
